--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <!-- modal popup -->
+    <!-- form/modal popup -->
     <div class="modal" id="modal">
         <div class="close-modal-btn-container">
             <button class="modal-close-btn" id="modal-close-btn" disabled>X</button>
